--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <body>
-    <h3>buy on drop/>
-    <input id="highest-price" placeholder="3000" value="3000" />
-    <input id="drop-by" placeholder="1" value="1" />
-    <button id="drop-btn">generate drop price</button>
+    <h3>buy on drop</h3><br/>
+    <input id="highest-price" placeholder="3000" value="3000" /><br/>
+    <input id="drop-by" placeholder="1" value="1" /><br/>
+    <button id="drop-btn">generate drop price</button> <br/>
     <div>
       <div id="price-list"></div>
     </div>
